@@ -1,0 +1,5 @@
+package it.uniroma2.art.semanticturkey.extension.extpts.datasetcatalog;
+
+public enum SelectionMode {
+	disabled, single, multiple
+}
