@@ -1,5 +1,6 @@
 version 6.0-SNAPSHOT
 date: dd/MM/yyyy
+  * Added a connector for the Euopean Union Open Data Portal (ODP) (
   * Added the creation of Lucene indexes for the resource in the projects and the relative search functionalities
   * Added the support for blacklisting guided by the validation machinery
   * Extended the service MAPLE to generated a report on the problem of matching two given datasets
